--- a/CS230/login.html
+++ b/CS230/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <form class="form-signin" style="background-color: #1b1e21">
-    <img class="rounded mx-auto d-block" src="login-logo.png" alt="" width="72px" height="90px">
+    <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
     <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
