--- a/CS230/login.html
+++ b/CS230/login.html
@@ -21,7 +21,7 @@
         <input type="checkbox" value="remember-me" >
         <label style="color: #ffffff"> Remember me</label>
     </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke; "><b>Sign in</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/main.html';"><b>Sign in</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 
