--- a/CS230/login.html
+++ b/CS230/login.html
@@ -10,7 +10,7 @@
     <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
-<form class="form-signin" style="background-color: #1b1e21">
+<form class="form-signin" style="background-color: #F8F8F8">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
     <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
@@ -21,7 +21,7 @@
         <input type="checkbox" value="remember-me" >
         <label style="color: #ffffff"> Remember me</label>
     </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/main.html';"><b>Sign in</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/main2.html';"><b>Sign in</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 
