--- a/CS230/main.html
+++ b/CS230/main.html
@@ -1,11 +1,74 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>ACME Seeds Garden Template</h1>
-    <h3>Hello this is cool</h3>
-  </body>
-</html>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+  <title>ACME Seeds</title>
+
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">ACME Seeds</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
+      <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/login.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Export Seed Order</a></li>
+
+    </ul>
+    </div>
+  </nav>
+
+<div class="container-fluid">
+
+  <div class="row">
+
+    <div class="col-sm-2 pt-3" style="text-align: center">
+
+      <h3>Garden Details</h3>
+
+      <p>Shows details of the garden (cost, totals for seeds, etc.)</p>
+
+    </div>
+
+    <div class="col-sm-6 pt-3" style="text-align: center">
+
+    </div>
+
+    <div class="col-sm-4 pt-3" style="text-align: center">
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Seeds <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Sunflower</a></li>
+          <li><a href="#">Rose</a></li>
+          <li><a href="#">Tulip</a></li>
+          <li><a href="#">Normal</a></li>
+          <li><a href="#">Dahlia</a></li>
+          <li><a href="#">Daffodil</a></li>
+          <li><a href="#">Tulip</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
