another commit for main

--- a/CS230/main.html
+++ b/CS230/main.html
@@ -128,7 +128,7 @@
             <td><p>Strawberries grow best from January to February</p></td>
             <td><p>Strawberries grow best from January to February</p></td>
             <td><p>Strawberries grow best from January to February</p></td>
-            <td><p>Strawberries grow best from January to February</p></td>``
+            <td><p>Strawberries grow best from January to February</p></td>
           </tr>
           <tr>
             <!--th scope="row"></th-->
