removed active email and password field

--- a/CS230/main.html
+++ b/CS230/main.html
@@ -31,8 +31,8 @@
         <li class="active"; onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/main2.html';"><a href="#">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
-      <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>
+      <!--<li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
+      <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>-->
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Export Seed Order</a></li>
