Climate dropdown attempted fix

--- a/CS230/main.html
+++ b/CS230/main.html
@@ -91,12 +91,12 @@
             <a href="#">Daffodil</a>
         </div>
       </div>
-      <div class="dropdown-climate" style="display: inline-block">
-        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+      <div class="dropdown" style="display: inline-block">
+        <button class="btn btn-default dropdown-toggle" onclick="climateSelection()" type="button" data-toggle="dropdown">
           Climate <span class="caret"></span>
         </button>
         <div id="climateDropdown" class="dropdown-content">
-        <!--<input class="form-control" type="text" placeholder="Search.." id="climateForm" onkeyup="filterFunction()">-->
+          <input onkeyup="displayFunction()"
             <a href="#">Temperate</a>
             <a href="#">Cold</a>
             <a href="#">Dry</a>
@@ -128,7 +128,7 @@
             <td><p>Strawberries grow best from January to February</p></td>
             <td><p>Strawberries grow best from January to February</p></td>
             <td><p>Strawberries grow best from January to February</p></td>
-            <td><p>Strawberries grow best from January to February</p></td>``
+            <td><p>Strawberries grow best from January to February</p></td>
           </tr>
           <tr>
             <!--th scope="row"></th-->
