--- a/CS230/freshStart.html
+++ b/CS230/freshStart.html
@@ -12,16 +12,8 @@
 <body>
 <form class="form-signin" style="background-color: #1b1e21">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-        <input type="checkbox" value="remember-me" >
-        <label style="color: #ffffff"> Remember me</label>
-    </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke; "><b>Sign in</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'login.html';">Sign in</button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'main.html';">Create Garden without Account</button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 </body>
