--- a/CS230/main.html
+++ b/CS230/main.html
@@ -18,6 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="filterSeeds.js"></script>
   <script src="updateTable.js"></script>
+  <script src="moveSeeds.js"></script>
 </head>
 
 <body>
@@ -28,14 +29,17 @@
         <a class="navbar-brand" href="#">ACME Seeds</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"; onclick="window.location.href = 'file:///Users/Mac/github/It-ll-Be-Something/CS230/main2.html';"><a href="#">Home</a></li>
+        <li class="active"; onclick="window.location.href = 'main2.html';"><a href="#">Home</a></li>
+        <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
       <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>-->
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Export Seed Order</a></li>
+      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Seed Checkout</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-open"></span> Share Garden</a></li>
 
     </ul>
     </div>
@@ -49,7 +53,16 @@
 
       <h3>Garden Details</h3>
       <p>Shows details of the garden (cost, totals for seeds, etc.)</p>
-      <button class="btn btn-outline-warning" onclick="addRow()">Add Row</button>
+      <button class="btn btn-outline-default" onclick="addRow()">Add Row</button>
+      <button class="btn btn-outline-default" onclick="deleteRow()">Delete Row</button>
+      <button class="btn btn-outline-default" onclick="">Select Template</button>
+      <button class="btn btn-outline-default" onclick="">Create Template</button>
+      <button class="btn btn-outline-default" onclick="">Resize</button>
+      <button class="btn btn-outline-default" onclick="">Unit Scale</button>
+      <button class="btn btn-outline-default" onclick="">Change Climate</button>
+
+      <p>Garden Cost: $9000.01</p>
+      <p>Total Seeds Purchased: 100</p>
 
     </div>
 
@@ -66,7 +79,7 @@
           </tr>
           <tr>
             <!--th scope="row"></th-->
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td><img src="assets/empty-grid-component.png" class="droppable" alt="Something goes here and IDK what"></td>
             <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
             <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
             <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
@@ -139,7 +152,14 @@
           </tr>
       </tbody>
     </table>
+
+    <div class="card" style="width: 18rem;" id="seed">
+      <img class="card-img-top" src="assets/Daffodil.png" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Sunflower</p>
+      </div>
     </div>
+  </div>
   </div>
 </div>
 </body>
