final push from alex, 10:14

--- a/CS230/calendar.html
+++ b/CS230/calendar.html
@@ -10,14 +10,14 @@
     <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
-  <div class="col-sm-2"></div>
-  <div class="col-sm-8">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
   <div class="table-responsive-sm">
   <table class="table" style="margin-top: 50px">
     <tbody>
       <tr>
         <!--th scope="row"></th-->
-        <th colspan="7" style="text-align: center"><p>Calendar Reference</p></th>
+        <th colspan="7" style="text-align: center"><p>Calendar Reference - November 2020</p></th>
       </tr>
       <tr>
         <!--th scope="row"></th-->
@@ -31,13 +31,13 @@
       </tr>
       <tr>
         <!--th scope="row"></th-->
-        <td><p>1</p></td>
+        <td><p>1<br>Water Roses</p></td>
         <td><p>2</p></td>
-        <td><p>3</p></td>
+        <td><p>3<br>Water Roses</p></td>
         <td><p>4</p></td>
-        <td><p>5</p></td>
+        <td><p>5<br>Water Roses</p></td>
         <td><p>6</p></td>
-        <td><p>7</p></td>
+        <td><p>7<br>Water Roses</p></td>
       </tr>
       <tr>
         <!--th scope="row"></th-->
@@ -59,10 +59,30 @@
         <td><p>20</p></td>
         <td><p>21</p></td>
       </tr>
+      <tr>
+        <!--th scope="row"></th-->
+        <td><p>22</p></td>
+        <td><p>23</p></td>
+        <td><p>24</p></td>
+        <td><p>25</p></td>
+        <td><p>26</p></td>
+        <td><p>27</p></td>
+        <td><p>28</p></td>
+      </tr>
+      <tr>
+        <!--th scope="row"></th-->
+        <td><p>29</p></td>
+        <td><p>30</p></td>
+        <td><p></p></td>
+        <td><p></p></td>
+        <td><p></p></td>
+        <td><p></p></td>
+        <td><p></p></td>
+      </tr>
   </tbody>
   </table>
   </div>
   </div>
-  <div class="col-sm-2"></div>
+  <div class="col-sm-1"></div>
 </body>
 </html>
