--- a/CS230/main.html
+++ b/CS230/main.html
@@ -19,6 +19,7 @@
   <script src="filterSeeds.js"></script>
   <script src="updateTable.js"></script>
   <script src="moveSeeds.js"></script>
+  <script src="climateControl.js"></script>
 </head>
 
 <body>
@@ -67,26 +68,28 @@
     </div>
 
     <div class="col-sm-6 pt-3" style="text-align: center">
-      <!--<h1 class="text-hide" style="background-image: url('assets/empty-grid-component.png'); width: 50px; height: 50px;">GridComponent</h1>-->
-      <table class="table table-bordered" id="gardenGrid">
-        <tbody>
-          <tr>
-            <!--th scope="row"></th-->
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-          </tr>
-          <tr>
-            <!--th scope="row"></th-->
-            <td><img src="assets/empty-grid-component.png" class="droppable" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-          </tr>
-      </tbody>
-      </table>
 
+    <div id="gardenGrid">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <br>
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <br>
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
+      <br>
+      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
+      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
+      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
+      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
+    </div>
     </div>
 
     <div class="col-sm-4 pt-3" style="text-align: center;">
@@ -154,7 +157,7 @@
     </table>
 
     <div class="card" style="width: 18rem;" id="seed">
-      <img class="card-img-top" src="assets/Daffodil.png" alt="Card image cap">
+      <img class="card-img-top" src="assets/Sunflower.png" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Sunflower</p>
       </div>
