Fixed garden grid and its add and delete row functions

--- a/CS230/main.html
+++ b/CS230/main.html
@@ -69,26 +69,30 @@
 
     <div class="col-sm-6 pt-3" style="text-align: center">
 
-    <div id="gardenGrid">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <br>
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <br>
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element">
-      <br>
-      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
-      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
-      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
-      <img src="assets/Rose.png" class="rounded float-left" title="Rose">
+    <div>
+      <table id="gardenGrid" align="center">
+      <tbody>
+        <tr>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+        <tr>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+          <tr>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" title="Empty Seed Element"></td>
+            <tr>
+              <td><img src="assets/Rose.png" class="rounded float-left" title="Empty Seed Element"></td>
+              <td><img src="assets/Rose.png" class="rounded float-left" title="Empty Seed Element"></td>
+              <td><img src="assets/Rose.png" class="rounded float-left" title="Empty Seed Element"></td>
+              <td><img src="assets/Rose.png" class="rounded float-left" title="Empty Seed Element"></td>
+      </table>
     </div>
     </div>
 
