--- a/CS230/freshStart.html
+++ b/CS230/freshStart.html
@@ -12,8 +12,8 @@
 <body>
 <form class="form-signin" style="background-color: #1b1e21">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'login.html';">Sign in</button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;" onclick="window.location.href = 'main.html';">Create Garden w/o Account</button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'login.html';"><b> Login</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main2.html';"><b> Create Garden w/o Account</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 </body>
