--- a/CS230/main2.html
+++ b/CS230/main2.html
@@ -11,11 +11,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="seedsSearch.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="filterSeeds.js"></script>
+  <script src="updateTable.js"></script>
+  <script src="moveSeeds.js"></script>
+  <script src="climateControl.js"></script>
 </head>
 
 <body>
@@ -26,55 +32,162 @@
         <a class="navbar-brand" href="#">ACME Seeds</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
+        <li class="active"; onclick="window.location.href = 'main2.html';"><a href="#">Home</a></li>
+        <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Export Seed Order</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+      <!--<li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
+      <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>-->
+      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Seed Checkout</a></li>
+      <!-- <li><a href="#" onclick="saveGarden()"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li> -->
+      <!-- <li><a href="#" onclick="shareGarden()"><span class="glyphicon glyphicon-open"></span> Share Garden</a></li> -->
+
     </ul>
     </div>
   </nav>
 
-<div class="container">
+<div class="container-fluid">
 
   <div class="row">
 
-    <div class="col-sm-4">
+    <div class="col-sm-2 pt-3" style="text-align: center">
 
-      <h3>Column 1</h3>
+      <h3>Garden Details</h3>
+      <p>Shows details of the garden (cost, totals for seeds, etc.)</p>
+      <button class="btn btn-outline-default" onclick="">Select Template</button>
+      <button class="btn btn-outline-default" onclick="">Create Template</button>
+      <!-- <div class="dropdown" style="display: inline-block">
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+          Resize <span class="caret"></span>
+        </button>
+        <div id="resizeDropdown" class="dropdown-content">
+            <a href="#">400X300</a>
+            <a href="#">200X300</a>
+            <a href="#">400X200</a>
+            <a href="#">200X100</a>
+            <a href="#">100X400</a>
+            <a href="#">360X420</a>
+        </div>
+      </div> -->
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Resize <span class="caret"></span>
+        </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <button class="resize-item" id="resize1" type="button" onclick="resize1()">500X400</button>
+            <button class="resize-item" id="resize2" type="button" onclick="resize2()">400X400</button>
+            <button class="resize-item" id="resize3" type="button" onclick="resize3()">300X200</button>
+            <button class="resize-item" id="resize3" type="button" onclick="resizeOriginal()">Original</button>
+          </div>
+        </div>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <button class="btn btn-outline-default" onclick="">Unit Scale</button>
+      <button class="btn btn-outline-default">Change Climate</button>
 
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Garden Cost: $9000.01</p>
+      <p>Total Seeds Purchased: 100</p>
 
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-6 pt-3" style="text-align: center">
+      <!--<h1 class="text-hide" style="background-image: url('assets/empty-grid-component.png'); width: 50px; height: 50px;">GridComponent</h1>-->
+      <!-- <table class="table table-bordered" id="gardenGrid">
+        <tbody>
+          <tr>
+            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+          </tr>
+          <tr>
+            <td><img src="assets/empty-grid-component.png" class="droppable" alt="Something goes here and IDK what"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
+          </tr>
+      </tbody>
+      </table> -->
+      <canvas id='canvas' width='600' height='360' style="border: 1px solid black;">
+      </canvas>
 
-      <h3>Column 2</h3>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <div id="seedcontainer" style="margin-top: 60px">
+      <div id="seeds">
+        <img class="seed" src="assets/Daffodil.png" alt="Sunflower">
+        <img class="seed" src="assets/Dahlia.png" alt="Sunflower">
+        <img class="seed" src="assets/Rose.png" alt="Sunflower">
+        <img class="seed" src="assets/Sunflower.png" alt="Sunflower">
+        <img class="seed" src="assets/Tulip.png" alt="Sunflower">
+    </div>
+    </div>
 
     </div>
 
-    <div class="col-sm-4">
-
-      <h3>Column 3</h3>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-
-    </div>
+    <div class="col-sm-4 pt-3" style="text-align: center;">
+      <div class="dropdown" style="display: inline-block">
+        <button class="btn btn-default dropdown-toggle" onclick="filter()" type="button" data-toggle="dropdown">
+          Seeds <span class="caret"></span>
+        </button>
+        <div id="seedDropdown" class="dropdown-content">
+          <input class="form-control" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+            <a href="#">Sunflower</a>
+            <a href="#">Rose</a>
+            <a href="#">Tulip</a>
+            <a href="#">Normal</a>
+            <a href="#">Dahlia</a>
+            <a href="#">Daffodil</a>
+        </div>
+      </div>
+      <div class="dropdown" style="display: inline-block">
+        <button class="btn btn-default dropdown-toggle" onclick="climateSelection()" type="button" data-toggle="dropdown">
+          Climate <span class="caret"></span>
+        </button>
+        <div id="climateDropdown" class="dropdown-content">
+            <a href="#">Temperate</a>
+            <a href="#">Cold</a>
+            <a href="#">Dry</a>
+            <a href="#">Wet</a>
+        </div>
+      </div>
+      <table class="calendartable table-bordered" style="margin-top: 50px">
+        <tbody>
+          <tr>
+            <!--th scope="row"></th-->
+            <th colspan="4" style="text-align: center"><p>Calendar Reference</p></th>
+          </tr>
+          <tr>
+            <!--th scope="row"></th-->
+            <td><p>Jan-Mar</p></td>
+            <td><p>Apr-Jun</p></td>
+            <td><p>Jul-Sept</p></td>
+            <td><p>Oct-Dec</p></td>
+          </tr>
+          <tr>
+            <!--th scope="row"></th-->
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+          </tr>
+          <tr>
+            <!--th scope="row"></th-->
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+          </tr>
+          <tr>
+            <!--th scope="row"></th-->
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+            <td><p>Strawberries grow best from January to February</p></td>
+          </tr>
+      </tbody>
+    </table>
 
   </div>
-
+  </div>
 </div>
-
-​
-
 </body>
