--- a/CS230/signUp.html
+++ b/CS230/signUp.html
@@ -13,6 +13,8 @@
 <form class="form-signin" style="background-color: #1b1e21">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
     <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
+    <label for="inputEmail" class="sr-only">Username</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
@@ -21,8 +23,9 @@
         <input type="checkbox" value="remember-me" >
         <label style="color: #ffffff"> Remember me</label>
     </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main.html';"><b>Login</b></button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'signUp.html';"><b>Create an account</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main.html';"><b>Submit</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'login.html';"><b>Have an account? Login</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'freshStart.html';"><b> Create Garden w/o Account</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 </body>
