--- a/CS230/main2.html
+++ b/CS230/main2.html
@@ -33,13 +33,13 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"; onclick="window.location.href = 'main2.html';"><a href="#">Home</a></li>
-        <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li>
+        <!-- <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
       <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>-->
       <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li class="active"; onclick="window.location.href = 'signUp.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Seed Checkout</a></li>
       <!-- <li><a href="#" onclick="saveGarden()"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li> -->
       <!-- <li><a href="#" onclick="shareGarden()"><span class="glyphicon glyphicon-open"></span> Share Garden</a></li> -->
